{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 56,
  "lineage": "c35cacfe-6134-f4b7-d895-ab4704d546d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061ac2e015473fbe2",
            "arn": "arn:aws:ec2:us-east-1:707920849273:instance/i-004315f724a1e5040",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-004315f724a1e5040",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7fae46f92274b4c",
            "private_dns": "ip-10-0-0-78.ec2.internal",
            "private_ip": "10.0.0.78",
            "public_dns": "ec2-54-157-254-75.compute-1.amazonaws.com",
            "public_ip": "54.157.254.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052666aa52f86565e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027a90caad88e0a76",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bf9dd2bbb58a392"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061ac2e015473fbe2",
            "arn": "arn:aws:ec2:us-east-1:707920849273:instance/i-0ed56909beabf35a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0ed56909beabf35a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f5c0ca5fc37b413",
            "private_dns": "ip-10-0-1-240.ec2.internal",
            "private_ip": "10.0.1.240",
            "public_dns": "ec2-54-89-187-91.compute-1.amazonaws.com",
            "public_ip": "54.89.187.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03005b6f2587f0fd2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06690349447afab66",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bf9dd2bbb58a392"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:internet-gateway/igw-014d999b23e36b0d6",
            "id": "igw-014d999b23e36b0d6",
            "owner_id": "707920849273",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-48500",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:loadbalancer/app/globo-web-alb/e3e7ba0668958cda",
            "arn_suffix": "app/globo-web-alb/e3e7ba0668958cda",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1089728723.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:707920849273:loadbalancer/app/globo-web-alb/e3e7ba0668958cda",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "security_groups": [
              "sg-0c33e3105fb81b186"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027a90caad88e0a76"
              },
              {
                "subnet_id": "subnet-06690349447afab66"
              }
            ],
            "subnets": [
              "subnet-027a90caad88e0a76",
              "subnet-06690349447afab66"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0803f9f3e9baa0623",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:listener/app/globo-web-alb/e3e7ba0668958cda/c1e904057e03dc23",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:707920849273:listener/app/globo-web-alb/e3e7ba0668958cda/c1e904057e03dc23",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:loadbalancer/app/globo-web-alb/e3e7ba0668958cda",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet2",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand",
            "aws_lb_target_group.nginx",
            "aws_subnet.subnet1",
            "aws_security_group.alb_sg",
            "aws_vpc.vpc",
            "aws_lb.nginx",
            "aws_s3_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
            "arn_suffix": "targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6-20211209220305263200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
            "target_id": "i-004315f724a1e5040"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6-20211209220210894100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:707920849273:targetgroup/nginx-alb-tg/6f39f9fd970e68f6",
            "target_id": "i-0ed56909beabf35a9"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:route-table/rtb-029141c9524430859",
            "id": "rtb-029141c9524430859",
            "owner_id": "707920849273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014d999b23e36b0d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0772536a7dc56f8",
            "route_table_id": "rtb-029141c9524430859",
            "subnet_id": "subnet-027a90caad88e0a76"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c5f334270529cf5",
            "route_table_id": "rtb-029141c9524430859",
            "subnet_id": "subnet-06690349447afab66"
          },
          "dependencies": [
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:security-group/sg-0c33e3105fb81b186",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c33e3105fb81b186",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "707920849273",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:security-group/sg-02bf9dd2bbb58a392",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bf9dd2bbb58a392",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "707920849273",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:subnet/subnet-027a90caad88e0a76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-027a90caad88e0a76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707920849273",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:subnet/subnet-06690349447afab66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06690349447afab66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707920849273",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0803f9f3e9baa0623"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707920849273:vpc/vpc-0803f9f3e9baa0623",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049c226085d3f5146",
            "default_route_table_id": "rtb-001117e2bbae3055a",
            "default_security_group_id": "sg-08e129cac8ea2c83c",
            "dhcp_options_id": "dopt-0bb590934aad303fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0803f9f3e9baa0623",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-001117e2bbae3055a",
            "owner_id": "707920849273",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            }
          }
        }
      ]
    }
  ]
}